force-app/main/default/objects/Game__c/fields/AST__c.field-meta.xml
<CustomField>
    <fullName>AST__c</fullName>
    <label>AST</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>