force-app/main/default/objects/Game__c/fields/BLK__c.field-meta.xml
<CustomField>
    <fullName>BLK__c</fullName>
    <label>BLK</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>