force-app/main/default/objects/Game__c/fields/DREB__c.field-meta.xml
<CustomField>
    <fullName>DREB__c</fullName>
    <label>DREB</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>