force-app/main/default/objects/Game__c/fields/FG3__c.field-meta.xml
<CustomField>
    <fullName>FG3__c</fullName>
    <label>FG3 %</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>