force-app/main/default/objects/Game__c/fields/FG3M__c.field-meta.xml
<CustomField>
    <fullName>FG3M__c</fullName>
    <label>FG3M</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>