force-app/main/default/objects/Game__c/fields/FG__c.field-meta.xml
<CustomField>
    <fullName>FG__c</fullName>
    <label>FG %</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>