force-app/main/default/objects/Game__c/fields/FGA__c.field-meta.xml
<CustomField>
    <fullName>FGA__c</fullName>
    <label>FGA</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>