force-app/main/default/objects/Game__c/fields/FGM__c.field-meta.xml
<CustomField>
    <fullName>FGM__c</fullName>
    <label>FGM</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>