force-app/main/default/objects/Game__c/fields/FT__c.field-meta.xml
<CustomField>
    <fullName>FT__c</fullName>
    <label>FT %</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>