force-app/main/default/objects/Game__c/fields/FTA__c.field-meta.xml
<CustomField>
    <fullName>FTA__c</fullName>
    <label>FTA</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>