force-app/main/default/objects/Game__c/fields/FTM__c.field-meta.xml
<CustomField>
    <fullName>FTM__c</fullName>
    <label>FTM</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>