force-app/main/default/objects/Game__c/fields/GameId__c.field-meta.xml
<CustomField>
    <fullName>GameId__c</fullName>
    <externalId>true</externalId>
    <label>GameId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>