force-app/main/default/objects/Game__c/fields/MIN__c.field-meta.xml
<CustomField>
    <fullName>MIN__c</fullName>
    <label>MIN</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>