force-app/main/default/objects/Game__c/fields/Number_of_Games__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Games__c</fullName>
    <label>Games</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>