force-app/main/default/objects/Game__c/fields/OREB__c.field-meta.xml
<CustomField>
    <fullName>OREB__c</fullName>
    <label>OREB</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>