force-app/main/default/objects/Game__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <label>PF</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>