force-app/main/default/objects/Game__c/fields/Plus_minus__c.field-meta.xml
<CustomField>
    <fullName>Plus_minus__c</fullName>
    <label>+/-</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>