force-app/main/default/objects/Game__c/fields/PTS__c.field-meta.xml
<CustomField>
    <fullName>PTS__c</fullName>
    <label>PTS</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>