force-app/main/default/objects/Game__c/fields/REB__c.field-meta.xml
<CustomField>
    <fullName>REB__c</fullName>
    <label>REB</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>