force-app/main/default/objects/Game__c/fields/STL__c.field-meta.xml
<CustomField>
    <fullName>STL__c</fullName>
    <label>STL</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>