force-app/main/default/objects/Game__c/fields/TOV__c.field-meta.xml
<CustomField>
    <fullName>TOV__c</fullName>
    <label>TOV</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>