force-app/main/default/objects/Game__c/fields/W_L__c.field-meta.xml
<CustomField>
    <fullName>W_L__c</fullName>
    <label>W/L</label>
    <length>5</length>
    <type>Text</type>
</CustomField>